marketing/styles/elements/_content.scss
.content {

  z-index: 3;
  position: relative;

  .info-row {
    display: table;
    width: 70%;
    margin: 0 auto;

    color: $light-grey-text;
    font-size: 16px;

    .icon-container {
      display: table-cell;
      width: 100px;
      vertical-align: middle;

      i {
        font-size: 72px;
      }
    }

    .text-container {
      display: table-cell;
      width: 100%;
      vertical-align: top;

      h1, h2, h3, h4, h5, h6 { color: $white; }
    }
  }

  .btn > i {
    font-size: 20px;
  }

  & > .shadow {
    position: absolute;
    right: 0;
    top: 0;
    left: 0;
    height: 5px;

    opacity: 0.2;

    background: -moz-linear-gradient(bottom,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 100%);
    background: -webkit-gradient(linear, left bottom, left top, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.65)));
    background: -webkit-linear-gradient(bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
    background: -o-linear-gradient(bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
    background: -ms-linear-gradient(bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
    background: linear-gradient(to top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=0 );
  }

}

